fix: z-index for navbar

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -548,6 +548,26 @@ video {
   top: 40%;
 }
 
+.z-0{
+  z-index: 0;
+}
+
+.-z-0{
+  z-index: 0;
+}
+
+.-z-10{
+  z-index: -10;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.z-50{
+  z-index: 50;
+}
+
 .float-none{
   float: none;
 }
@@ -676,11 +696,6 @@ video {
 
 .p-2{
   padding: 0.5rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .px-3{
